# readable-fetch

./: .gitignore  LICENSE  README.md  demo.py  demo_gpt.py  pyproject.toml
src/readable_fetch/: url_to_markdown.py  url_to_markdown_gpt.py
src/readable_fetch/mcp_server/: __init__.py  server.py
tests/: test_mcp_server.py
typings/readability/: __init__.pyi  browser.pyi  cleaners.pyi  debug.pyi  encoding.pyi  htmls.pyi  readability.pyi
